Working on fixing text overflows.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -193,6 +193,7 @@ body{
 
 #content_container{
     display: block;
+    width: 100%;
 }
 
 
